--- a/src/components/myNotes/MyNotes.module.scss
+++ b/src/components/myNotes/MyNotes.module.scss
@@ -1,20 +1,19 @@
 .notes{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  .title{
-    color: #4d4d4d;
-    font-size: 2rem;
-    font-weight: 300;
-    line-height: 1.5;
-    text-decoration: underline;
-    text-decoration-color: #0BB7A5;
-  }
   .searchContainer{
     display: flex;
     margin-top: 30px;
+    .searchField{
+      width: 600px;
+    }
   }
   .notesContainer{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 15px;
     margin-top: 30px;
   }
